--- a/src/Components/Blocks/Barriers/Barriers.scss
+++ b/src/Components/Blocks/Barriers/Barriers.scss
@@ -1,7 +1,6 @@
 .barriers {
   background: linear-gradient(180deg,rgba(238, 237, 235, 0.2) 0%,rgba(255, 255, 255, 0.2) 100%);
-  padding: 48px 0 0
-  ;
+  padding: 48px 0 0;
 
   .weightQuote {
     margin: 32px auto 60px;
