modified weightMatters section

--- a/src/Components/Blocks/Barriers/Barriers.html
+++ b/src/Components/Blocks/Barriers/Barriers.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="contentWrap">
-        <CallOut :callOutText="callOutContent" :maxWidth="maxWidth" />
+        <CallOut :callOutText="callOutContent" />
         <p class="left">Having conversations about weight to support T2D management can be another barrier for both HCPs and patients. But these conversations are important because weight management may support glycemic control and facilitate more comprehensive diabetes care.</p>
 
         <div class="slider">
