--- a/src/Components/Blocks/CallOut/CallOut.html
+++ b/src/Components/Blocks/CallOut/CallOut.html
@@ -1,5 +1,5 @@
 <div class="callOut">
   <div class="callOut__content">
-    <p v-html="callOutText" :style="{ maxWidth: maxWidth }"></p>
+    <p v-html="callOutText.text" :class="callOutText.class"></p>
   </div>
 </div>
