--- a/src/Components/Blocks/CallOut/CallOut.scss
+++ b/src/Components/Blocks/CallOut/CallOut.scss
@@ -15,6 +15,10 @@
       margin: 0 auto;
     }
 
+    .fullWidthBarrier {
+      max-width: 1072px;
+    }
+
     ::v-deep span.red {
       color: $primaryColor;
     }
