--- a/src/Components/Blocks/WeightQuote/WeightQuote.scss
+++ b/src/Components/Blocks/WeightQuote/WeightQuote.scss
@@ -2,40 +2,30 @@
   margin: 32px auto 60px;
   padding: 40px;
   background-color: #fff;
-  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.04),
-    0px 8px 16px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.04), 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
 
   &__data {
+    display: flex;
+    gap: 32px; 
+    align-items: center;
+
     &:nth-of-type(1) {
-      display: flex;
-      gap: 32px;
       padding-bottom: 32px;
       border-bottom: 1px solid #bdbdbd;
-      align-items: center;
-
-      p {
-        color: $bodyCopy;
-        font-size: $fontSize18;
-        font-weight: $fontWeightNormal;
-        line-height: $lineHeight135;
-
-        .semi-bold {
-          font-weight: $fontWeightSemiBold;
-        }
-      }
     }
 
     &:nth-of-type(2) {
-      display: flex;
       padding-top: 32px;
-      gap: 32px;
-      align-items: center;
+    }
 
-      p {
-        color: $bodyCopy;
-        font-size: $fontSize18;
-        font-weight: $fontWeightNormal;
-        line-height: $lineHeight135;
+    p {
+      color: $bodyCopy;
+      font-size: $fontSize18;
+      font-weight: $fontWeightNormal;
+      line-height: $lineHeight135;
+
+      .semi-bold {
+        font-weight: $fontWeightSemiBold;
       }
     }
   }
