--- a/src/Components/Blocks/Barriers/Barriers.scss
+++ b/src/Components/Blocks/Barriers/Barriers.scss
@@ -48,7 +48,7 @@
       }
 
       &__contentWrapper {
-        padding: 30px 32px;
+        padding: 30px 32px 24px;
       }
 
       &__textContainer {
@@ -92,32 +92,6 @@
           line-height: 135%;
           margin-top: 16px;
         }
-      }
-
-      &__bottomWrapper {
-        padding: 0 0 30px 0;
-        display: flex;
-        justify-content: center;
-        gap: 12px;
-      }
-
-      &__line {
-        width: 60px;
-        height: 6px;
-        border-radius: 999px;
-        background: linear-gradient(0deg,rgba(255, 255, 255, 0.7) 0%,rgba(255, 255, 255, 0.7) 100%),#fa4747;
-
-        &--active {
-          width: 60px;
-          height: 6px;
-          border-radius: 999px;
-          background: $primaryColor;
-        }
-      }
-
-      &__line:hover {
-        cursor: pointer;
-        background: $primaryColor;
       }
     }
   }
