--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -143,3 +143,30 @@ sup {
   line-height: $lineHeight140;
   margin: 20px auto 48px auto;
 }
+
+.slick-dots{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0 0;
+
+  li {
+    width: 60px;
+    height: 6px;
+    border-radius: 999px;
+    background: linear-gradient(0deg,rgba(255, 255, 255, 0.7) 0%,rgba(255, 255, 255, 0.7) 100%),#fa4747;
+
+    button {
+      display: none;
+    }
+  }
+
+  li.slick-active {
+    background: $primaryColor;
+  }
+
+  li:hover {
+    cursor: pointer;
+    background: $primaryColor;
+  }
+}
