slick dots position fixed

--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -145,7 +145,8 @@ sup {
 }
 
 .slick-dots{
-  display: flex;
+  display: flex !important;
+  position: static;
   align-items: center;
   justify-content: center;
   padding: 30px 0 0;
