--- a/src/Components/Blocks/WeightQuote/WeightQuote.html
+++ b/src/Components/Blocks/WeightQuote/WeightQuote.html
@@ -1,6 +1,9 @@
 <div class="weightQuote">
-  <div class="weightQuote__data" v-for="(data, index) in quoteData" :key="index">
-    <img :src="data.image" alt="icon" />
-    <p v-html="data.text"></p>
-  </div>
+  <ul>
+    <li class="weightQuote__data" v-for="(data, index) in quoteData" :key="index">
+      <img :src="data.image" alt="icon" />
+      <p v-html="data.text"></p>
+    </li>
+  </ul>
+
 </div>
