--- a/src/Components/Blocks/WeightManagement/WeightManagement.html
+++ b/src/Components/Blocks/WeightManagement/WeightManagement.html
@@ -1,5 +1,7 @@
 <div class="weightManagement" id="Importance">
     <div class="contentWrap">
         <Info :infoData="infoData" />
+        <RiskReduction :riskReductionData="riskReductionData" />
+        <Graphs :graphData="graphData"/>
     </div>
 </div>
