weightmanagement component completed

--- a/src/Components/Blocks/CallOut/CallOut.scss
+++ b/src/Components/Blocks/CallOut/CallOut.scss
@@ -19,6 +19,10 @@
       max-width: 1072px;
     }
 
+    .fullWidthWeightManagement{
+      max-width: 1080px;
+    }
+
     ::v-deep span.red {
       color: $primaryColor;
     }
