--- a/src/Components/Blocks/WeightManagement/WeightManagement.html
+++ b/src/Components/Blocks/WeightManagement/WeightManagement.html
@@ -4,4 +4,17 @@
         <RiskReduction :riskReductionData="riskReductionData" />
         <Graphs :graphData="graphData"/>
     </div>
+
+    <div class="chartContainer">
+        <p v-for="(data, index) in chartData.text" v-html="data"></p>
+
+        <div class="chart" v-for="(data, index) in chartData.image">
+          <img :src="data" alt="chart">
+        </div>
+    </div>
+
+    <div class="contentWrap">
+        <CallOut :callOutText="callOutContent" />
+        <p class="footnote">T2D, type 2 diabetes.</p>
+    </div>
 </div>
