--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -152,6 +152,10 @@ sup {
   margin: 60px auto 40px;
 }
 
+.red {
+  color: $primaryColor;
+}
+
 .slick-dots{
   display: flex !important;
   position: static;
