--- a/src/Components/Blocks/WeightManagement/WeightManagement.scss
+++ b/src/Components/Blocks/WeightManagement/WeightManagement.scss
@@ -1,6 +1,6 @@
 .weightManagement {
   background: linear-gradient(180deg,rgba(238, 237, 235, 0.2) 0%,rgba(255, 255, 255, 0.2) 100%);
-  padding: 48px 0 60px;
+  padding: 48px 0 0;
 
   .chartContainer {
     width: 100%;
