--- a/src/Components/Blocks/ResourceHub/ResourceHub.html
+++ b/src/Components/Blocks/ResourceHub/ResourceHub.html
@@ -1,5 +1,16 @@
 <div class="resourceHub" id="Resource">
     <div class="contentWrap">
         <Info :infoData="infoData" />
+
+        <div class="container">
+            <div class="text">
+                <p class="text__title">Medical Workmat</p>
+                <p class="text__description">Talking to patients with T2D about weight management can be challenging. The Medical Workmat can help navigate those conversations.</p>
+                <button>Download the Medical Workmat</button>
+            </div>
+            <div class="image">
+                <img src="@/Assets/Img/ResourceSection/medical-workmat.png" alt="workmat">
+            </div>
+        </div>
     </div>
 </div>
