--- a/src/Components/Blocks/WeightManagement/WeightManagement.scss
+++ b/src/Components/Blocks/WeightManagement/WeightManagement.scss
@@ -1,5 +1,5 @@
 .weightManagement {
-  background: linear-gradient(180deg,rgba(238, 237, 235, 0.2) 0%,rgba(255, 255, 255, 0.2) 100%);
+  background: $gradient1;
   padding: 48px 0 0;
 
   .chartContainer {
