--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -75,8 +75,10 @@ $acentColor: #FA4747;
 $lightGray: #f3f3f3;
 $lightGray2: #E6F2DF;
 $blueColor: #006EAD;
-$gradient1: linear-gradient(90deg, #E8F4E4 0%, #FFF 48.5%, #EDF2F3 100%);
-$gradient2: linear-gradient(90deg, #2C6D3C 0%, #6CC04A 100%);
+$gradient1: linear-gradient(180deg,rgba(238, 237, 235, 0.2) 0%,rgba(255, 255, 255, 0.2) 100%);
+$gradient2: linear-gradient(270deg, #e1251b 0%, #fa4747 100%);
+$gradient3: linear-gradient(270deg, #bb1e15 0%, #dd2929 100%);
+$gradient4: linear-gradient(0deg,rgba(255, 255, 255, 0.7) 0%,rgba(255, 255, 255, 0.7) 100%),#fa4747;
 $lightGrayAlt2: #f5f5f5;
 $lightGrayAlt3: #ECEFF0;
 $blackOpacity: rgba(0, 0, 0, 0.10);
