--- a/src/Components/Blocks/Graphs/Graphs.scss
+++ b/src/Components/Blocks/Graphs/Graphs.scss
@@ -10,7 +10,7 @@
         max-width: 524px;
         border-radius: 12px;
         background: $white;
-        box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.04), 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
+        box-shadow: $boxShadow;
         padding: 15px 22px;
 
         p {
