--- a/src/Components/Blocks/WeightMatters/WeightMatters.scss
+++ b/src/Components/Blocks/WeightMatters/WeightMatters.scss
@@ -23,7 +23,7 @@
 .contentWrap {
   .videoContainer {
     background: $white;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.04), 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
+    box-shadow: $boxShadow;
     padding: 40px;
   }
 }
