--- a/src/Components/Blocks/WeightQuote/WeightQuote.scss
+++ b/src/Components/Blocks/WeightQuote/WeightQuote.scss
@@ -2,7 +2,7 @@
   margin: 32px auto 60px;
   padding: 40px;
   background-color: #fff;
-  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.04), 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: $boxShadow;
 
   &__data {
     display: flex;
