pop up modified with dynamic data

--- a/src/Components/Blocks/PopUp/PopUp.html
+++ b/src/Components/Blocks/PopUp/PopUp.html
@@ -1,7 +1,7 @@
 <div class="popUp" v-show="showPopUp">
   <div class="popUp__background" @click="togglePopUp"></div>
   <div class="popUp__content">
-    <img class="popUp__thumbnail" :src="imageSrc" alt="video thumbnail" />
+    <img class="popUp__thumbnail" :src="videoSrc" alt="video thumbnail" />
   </div>
   <div class="popUp__close">
     <img class="popUp__icon" src="@/Assets/Img/icons/icon-close-btn.svg" alt="icon" @click="togglePopUp" />
