accordian modified, yt video added in pop up

--- a/src/Components/Blocks/PopUp/PopUp.scss
+++ b/src/Components/Blocks/PopUp/PopUp.scss
@@ -40,8 +40,13 @@
         max-height: 462px;
         z-index: 999999;
     }
-    &__thumbnail {
+    // &__thumbnail {
+    //     width: 100%;
+    //     object-fit: cover;
+    // }
+
+    &__video {
         width: 100%;
-        object-fit: cover;
+        height: 100%;
     }
 }
