--- a/src/Components/Blocks/PopUp/PopUp.html
+++ b/src/Components/Blocks/PopUp/PopUp.html
@@ -1,7 +1,8 @@
 <div class="popUp" v-show="showPopUp">
   <div class="popUp__background" @click="togglePopUp"></div>
   <div class="popUp__content">
-    <img class="popUp__thumbnail" :src="videoSrc" alt="video thumbnail" />
+    <!-- <img class="popUp__thumbnail" :src="videoSrc" alt="video thumbnail" /> -->
+    <iframe class="popUp__video" alt="video" width="560" height="315" :src="videoSrc"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
   <div class="popUp__close">
     <img class="popUp__icon" src="@/Assets/Img/icons/icon-close-btn.svg" alt="icon" @click="togglePopUp" />
