abnormal component created for the chart

--- a/src/Components/Blocks/WeightMatters/WeightMatters.html
+++ b/src/Components/Blocks/WeightMatters/WeightMatters.html
@@ -3,9 +3,7 @@
         <Info :infoData="infoData" />
     </div>
     <div class="graphContainer">
-        <div class="graphImage">
-          <img src="@/Assets/Img/WeightMatters/graph.png" alt="graph">
-        </div>
+        <Abnormal />
     </div>
     <div class="contentWrap">
         <CallOut :callOutText="callOutContent" />
