--- a/src/Views/Home.html
+++ b/src/Views/Home.html
@@ -1,7 +1,7 @@
 <div class="home pageWrapper">
     <HeroSection :heroData="heroData" />
-    <WeightMatters />
-    <Barriers />
-    <WeightManagement />
-    <ResourceHub />
+    <WeightMatters :mattersData="mattersData" />
+    <Barriers :barriersData="barriersData" />
+    <WeightManagement :managementData="managementData" />
+    <ResourceHub :data="resourcesData" />
 </div>
