reponsiveness added in herosection

--- a/src/Components/Blocks/HeroSection/HeroSection.html
+++ b/src/Components/Blocks/HeroSection/HeroSection.html
@@ -1,4 +1,4 @@
-<div class="heroSection" :style="{backgroundImage: `url(${heroData.bgImage})`}">
+<div class="heroSection">
     <div class="contentWrap">
         <div class="heroSection__content">
             <h1 class="heroSection__title" v-html="heroData.title"></h1>
