abnormal graph made responsive

--- a/src/Components/Blocks/Abnormal/Abnormal.html
+++ b/src/Components/Blocks/Abnormal/Abnormal.html
@@ -18,15 +18,18 @@
   <div class="graph__rowTwo">
     <div class="organ">
         <p>Skeletal muscle<sup>6,8,9*†</sup></p>
-        <div><img src="../../../Assets/Img/Abnormal/icon-muscle.svg" alt="icon"></div>
+        <div class="organ__muscle"><img src="../../../Assets/Img/Abnormal/icon-muscle.svg" alt="icon"></div>
+        <span class="arrow"></span>
     </div>
     <div class="organ">
         <p>Liver<sup>6*†</sup></p>
-        <div><img src="../../../Assets/Img/Abnormal/icon-liver.svg" alt="icon"></div>
+        <div class="organ__liver"><img src="../../../Assets/Img/Abnormal/icon-liver.svg" alt="icon"></div>
+        <span class="arrow"></span>
     </div>
     <div class="organ">
         <p>Pancreas<sup>8,9*</sup></p>
-        <div><img src="../../../Assets/Img/Abnormal/icon-pancreas.svg" alt="icon"></div>
+        <div class="organ__pancreas"><img src="../../../Assets/Img/Abnormal/icon-pancreas.svg" alt="icon"></div>
+        <span class="arrow"></span>
     </div>
   </div>
   <div class="graph__rowThree">
