--- a/src/Styles/Helpers/_variables.scss
+++ b/src/Styles/Helpers/_variables.scss
@@ -30,6 +30,7 @@ $fontWeightBlack: 900;
 
 $fontSize9: 9px;
 $fontSize10: 10px;
+$fontSize11: 11px;
 $fontSize12: 12px;
 $fontSize14: 14px;
 $fontSize15: 15px;
