--- a/src/Components/Blocks/Abnormal/Abnormal.scss
+++ b/src/Components/Blocks/Abnormal/Abnormal.scss
@@ -2,6 +2,10 @@
     max-width: 1018px;
     margin: 0 auto;
 
+    @include media('<=tablet'){
+        max-width: 622px;
+    }
+
     &__rowOne {
         border-radius: 12px;
         border: 2px solid $acentColor;
@@ -9,28 +13,44 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 40px;
         margin-bottom: 59px;
         position: relative;
+
+        @include media('<=tablet') {
+            margin-bottom: 32px;
+            padding: 17px 22px;
+        }
 
         .arrow {
             position: absolute;
             bottom: -48px;
             content: url('../../../Assets/Img/Abnormal/icon-down-arrow.svg');
+
+            @include media('<=tablet') {
+                height: 25px;
+                bottom: -25px;
+            }
         }
         .arrow:nth-of-type(1) {
-            left: 159px;
+            left: 15.6%;
         }
         .arrow:nth-of-type(2) {
-            left: 509px;
+            left: 50%;
         }
         .arrow:nth-of-type(3) {
-            right: 159px;
+            right: 15.6%;
         }
     }
     &__rowOneIcon {
         max-width: 112px;
         max-height: 92px;
+        margin-right: 40px;
+
+        @include media('<=tablet'){
+            width: 61px;
+            height: 50px;
+            margin-right: 22px;
+        }
 
         img {
             width: 100%;
@@ -42,6 +62,10 @@
         ul {
             margin-top: 20px;
 
+            @include media('<=tablet') {
+                margin-top: 11px;
+            }
+
             li {
                 color:  $white;
                 font-size:  $fontSize14;
@@ -49,6 +73,10 @@
                 line-height: $lineHeight140;
                 position: relative;
                 padding-left: 16px;
+
+                @include media('<=tablet') {
+                    font-size: $fontSize11;
+                }
             }
             li::before{
                 position: absolute;
@@ -63,24 +91,40 @@
         font-size:  $fontSize34;
         font-weight: $fontWeightBold;
         line-height: $lineHeight135; 
-    }
 
-    
+        @include media('<=tablet'){
+            font-size: $fontSize16;
+        }
+    } 
 
     &__rowTwo {
         display: flex;
-        gap: 20px;
         margin-bottom: 59px;
+
+        @include media('<=tablet') {
+            margin-bottom: 32px;
+        }
 
         .organ {
             border-radius: 12px;
             border: 2px solid $acentColor;
-            width: 326px;
+            max-width: 326px;
+            width: 32%;
             padding: 32px 40px;
+            margin-left: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
             position: relative;
+            justify-content: space-between;
+
+            @include media('<=tablet') {
+                padding: 17px 22px;
+                width: 32%;
+            }
+            @include media('<=smallPhone') {
+                max-width: 32%;
+            }
 
             p {
                 margin-bottom: 31px;
@@ -89,15 +133,66 @@
                 font-size:  $fontSize20;
                 font-weight: $fontWeightBold;
                 line-height: $lineHeight135;
+
+                @include media('<=tablet') {
+                    font-size: $fontSize10;
+                    margin-bottom: 16px;
+                }
+            }
+
+            &__muscle{
+                width: 104px;
+                height: 103px;
+
+                @include media('<=tablet') {
+                    width: 56px;
+                    height: 55px;
+                }
+            }
+
+            &__liver {
+                width: 121px;
+                height: 91px;
+
+                @include media('<=tablet') {
+                    width: 65px;
+                    height: 49px;
+                }
+            }
+
+            &__pancreas {
+                width: 116px;
+                height: 110px;
+
+                @include media('<=tablet') {
+                    width: 63px;
+                    height: 59px;
+                }
+            }
+
+            .arrow {
+                position: absolute;
+                bottom: -48px;
+                content: url('../../../Assets/Img/Abnormal/icon-down-arrow.svg');
+    
+                @include media('<=tablet') {
+                    height: 25px;
+                    bottom: -25px;
+                }
             }
         }
         .organ:nth-of-type(1) {
-            padding: 32px 25px;
+            margin-left: 0;
+
+            @include media('<smallPhone') {
+                padding: 17px 0;
+            }
         }
-        .organ::after{
-            position: absolute;
-            bottom: -55px;
-            content: url('../../../Assets/Img/Abnormal/icon-down-arrow.svg');
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
 
@@ -109,24 +204,42 @@
         display: flex;
         position: relative;
 
+        @include media('<=tablet') {
+            padding: 6px 14px;
+            margin-bottom: 32px;
+        }
+
         .arrow {
             position: absolute;
             bottom: -48px;
             content: url('../../../Assets/Img/Abnormal/icon-down-arrow.svg');
+
+            @include media('<=tablet') {
+                height: 25px;
+                bottom: -25px;
+            }
         }
         .arrow:nth-of-type(1) {
-            left: 159px;
+            left: 15.6%;
         }
         .arrow:nth-of-type(2) {
-            left: 509px;
+            left: 50%;
         }
         .arrow:nth-of-type(3) {
-            right: 159px;
+            right: 15.6%;
         }
 
         ul {
             padding: 18.5px 0px;
-            width: 264px;
+            width: 29%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            
+            @include media('<=tablet') {
+                padding: 0;
+            }
+
             li {
                 color:  $white;
                 font-size:  $fontSize18;
@@ -134,6 +247,10 @@
                 line-height: $lineHeight140;
                 padding-left: 16px;
                 position: relative;
+
+                @include media('<=tablet') {
+                    font-size:  $fontSize10;
+                }
             }
             li::before{
                 position: absolute;
@@ -145,15 +262,37 @@
 
         ul:nth-of-type(1) {
             margin-right: 36px;
+
+            @include media('<=tablet') {
+                margin-right: 14px;
+            }
+            @include media('<smallPhone') {
+                padding-top: 7.5px;
+                padding-bottom: 7.5px;
+            }
         }
         ul:nth-of-type(2) {
             padding: 18.5px 36px;
-            width: 340px;
+            width: 34%;
             border-left: 2px solid $acentColor;
             border-right: 2px solid $acentColor;
+
+            @include media('<=tablet') {
+                padding: 0 14px;
+            }
+
+            @include media('<smallPhone') {
+                padding-top: 7.5px;
+                padding-bottom: 7.5px;
+            }
         }
         ul:nth-of-type(3) {
             margin-left: 36px;
+            align-self: self-start;
+
+            @include media('<=tablet') {
+                margin-left: 14px;
+            }
         }
     }
 
@@ -162,21 +301,34 @@
         border: 2px solid $acentColor;
         padding: 32px 40px;
 
+        @include media('<=tablet') {
+            padding: 17px 22px;
+        }
+
         .title {
-            color: #FFF;
+            color: $white;
             text-align: center;
             font-size: $fontSize34;
             font-weight: $fontWeightBold;
             line-height: $lineHeight135; 
+
+            @include media('<=tablet') {
+                font-size: $fontSize16;
+            }
         }
 
         .des {
-            color: var(--Common-White, #FFF);
+            color:  $white;
             text-align: center;
             font-size:  $fontSize18;
             font-weight: $fontWeightNormal;
             line-height: $lineHeight140;
             margin-top: 20px;
+
+            @include media('<=tablet') {
+                font-size: $fontSize9;
+                margin-top: 10px;
+            }
         }
     }
   }
