barriers responsiveness done

--- a/src/Components/Blocks/Barriers/Barriers.scss
+++ b/src/Components/Blocks/Barriers/Barriers.scss
@@ -41,6 +41,10 @@
 
       &__contentWrapper {
         padding: 30px 32px 24px;
+
+        @include media('<=tablet') {
+          padding: 30px 20px 24px;
+        }
       }
 
       &__textContainer {
