--- a/src/Components/Blocks/WeightQuote/WeightQuote.scss
+++ b/src/Components/Blocks/WeightQuote/WeightQuote.scss
@@ -9,6 +9,10 @@
     gap: 32px; 
     align-items: center;
 
+    @include media('<=smallPhone') {
+      flex-direction: column;
+    }
+
     &:nth-of-type(1) {
       padding-bottom: 32px;
       border-bottom: 1px solid #bdbdbd;
@@ -23,6 +27,10 @@
       font-size: $fontSize18;
       font-weight: $fontWeightNormal;
       line-height: $lineHeight135;
+
+      @include media('<=tablet') {
+        font-size: $fontSize16;
+      }
 
       .semi-bold {
         font-weight: $fontWeightSemiBold;
