--- a/src/Components/Blocks/RiskReduction/RiskReduction.scss
+++ b/src/Components/Blocks/RiskReduction/RiskReduction.scss
@@ -4,11 +4,22 @@
     padding: 40px;
     margin: 40px auto 60px;
 
+    @include media('<=tablet') {
+        padding: 40px 26px;
+    }
+    @include media('<=smallPhone') {
+        padding: 20px;
+    }
+
     p {
         color:  $bodyCopy;
         font-size: $fontSize18;
         font-weight: $fontWeightSemiBold;
         line-height: $lineHeight135;
+
+        @include media('<=phone') {
+            font-size: $fontSize16;
+        }
     }
 
     &__data {
@@ -17,5 +28,50 @@
         padding: 0 45px;
         align-items: start;
         justify-content: space-between;
+        max-width: 1040px;
+
+        @include media('<=phone') {
+            max-width: 652px;
+
+            li:nth-of-type(1) {
+                width: 16.5%;
+                height: auto;
+            }
+            li:nth-of-type(2) {
+                width: 16.8%;
+                height: auto;
+            }
+            li:nth-of-type(3) {
+                width: 23%;
+                height: auto;
+            }
+            li:nth-of-type(4) {
+                width: 19%;
+                height: auto;
+            }
+
+            li {
+                img {
+                    width: 100%;
+                }
+            }
+        }
+
+        @include media('<=smallPhone') {
+            flex-wrap: wrap;
+            max-width: 500px;
+            gap: 32px 12px;
+            padding: 0;
+
+            li {
+                flex: 40%;
+                
+                img{
+                    display: block;
+                    margin: 0 auto;
+                    width: auto;
+                }
+            }
+        }
     }
 }
