--- a/src/Components/Blocks/WeightManagement/WeightManagement.scss
+++ b/src/Components/Blocks/WeightManagement/WeightManagement.scss
@@ -15,6 +15,10 @@
       font-weight: $fontWeightSemiBold;
       line-height: $lineHeight135;
       max-width: 1120px;
+
+      @include media('<=tablet') {
+        font-size: $fontSize24;
+      }
     }
 
     p:nth-of-type(2) {
